[INJICERT-1239] feat(tests): simplify test setup and assertions in CredentialConfigurationServiceImplTest
Signed-off-by: amaydixit11 <amaydixit11@gmail.com>