@@ -53,8 +53,7 @@ public class CredentialConfigurationServiceImplTest {
     @Before
     public void setup() {
         Map<String, List<List<String>>> keyAliasMapper = new HashMap<>();
-        keyAliasMapper.put("EdDSA", List.of(
-                List.of("TEST2019", "TEST2019-REF")));
+        keyAliasMapper.put("EdDSA", List.of(List.of("TEST2019", "TEST2019-REF")));
         // keyAliasMapper.put("RS256", List.of());
 
         MockitoAnnotations.openMocks(this);
@@ -72,8 +71,7 @@ public class CredentialConfigurationServiceImplTest {
         credentialConfig.setScope("test_vc_ldp");
         credentialConfig.setCryptographicBindingMethodsSupported(List.of("did:jwk"));
         credentialConfig.setCredentialSigningAlgValuesSupported(List.of("Ed25519Signature2020"));
-        credentialConfig.setCredentialSubject(Map.of("name",
-                new CredentialSubjectParameters(List.of(new CredentialSubjectParameters.Display("Full Name", "en")))));
+        credentialConfig.setCredentialSubject(Map.of("name", new CredentialSubjectParameters(List.of(new CredentialSubjectParameters.Display("Full Name", "en")))));
         credentialConfig.setKeyManagerAppId("TEST2019");
         credentialConfig.setKeyManagerRefId("TEST2019-REF");
         credentialConfig.setSignatureCryptoSuite("Ed25519Signature2020");
@@ -84,13 +82,11 @@ public class CredentialConfigurationServiceImplTest {
         credentialConfigurationDTO.setVcTemplate("test_template");
         credentialConfigurationDTO.setCredentialFormat("ldp_vc");
         credentialConfigurationDTO.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
-        credentialConfigurationDTO
-                .setCredentialTypes(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"));
+        credentialConfigurationDTO.setCredentialTypes(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"));
         credentialConfigurationDTO.setSignatureCryptoSuite("Ed25519Signature2020");
         credentialConfigurationDTO.setKeyManagerAppId("TEST2019");
         credentialConfigurationDTO.setKeyManagerRefId("TEST2019-REF");
-        credentialConfigurationDTO.setCredentialSubjectDefinition(Map.of("name", new CredentialSubjectParametersDTO(
-                List.of(new CredentialSubjectParametersDTO.Display("Full Name", "en")))));
+        credentialConfigurationDTO.setCredentialSubjectDefinition(Map.of("name", new CredentialSubjectParametersDTO(List.of(new CredentialSubjectParametersDTO.Display("Full Name", "en")))));
 
         ReflectionTestUtils.setField(credentialConfigurationService, "credentialIssuer", "http://example.com/");
         ReflectionTestUtils.setField(credentialConfigurationService, "authUrl", "http://auth.com");
@@ -100,10 +96,8 @@ public class CredentialConfigurationServiceImplTest {
         Map<String, List<String>> credentialSigningMap = new LinkedHashMap<>();
         credentialSigningMap.put("Ed25519Signature2020", List.of("EdDSA"));
         credentialSigningMap.put("RsaSignature2018", List.of("RS256"));
-        ReflectionTestUtils.setField(credentialConfigurationService, "cryptographicBindingMethodsSupportedMap",
-                new LinkedHashMap<>());
-        ReflectionTestUtils.setField(credentialConfigurationService, "credentialSigningAlgValuesSupportedMap",
-                credentialSigningMap);
+        ReflectionTestUtils.setField(credentialConfigurationService, "cryptographicBindingMethodsSupportedMap", new LinkedHashMap<>());
+        ReflectionTestUtils.setField(credentialConfigurationService, "credentialSigningAlgValuesSupportedMap", credentialSigningMap);
         ReflectionTestUtils.setField(credentialConfigurationService, "proofTypesSupported", new LinkedHashMap<>());
         ReflectionTestUtils.setField(credentialConfigurationService, "keyAliasMapper", keyAliasMapper);
 
@@ -120,8 +114,7 @@ public class CredentialConfigurationServiceImplTest {
         when(credentialConfigMapper.toEntity(any(CredentialConfigurationDTO.class))).thenReturn(credentialConfig);
         when(credentialConfigRepository.save(any(CredentialConfig.class))).thenReturn(credentialConfig);
 
-        CredentialConfigResponse credentialConfigResponse = credentialConfigurationService
-                .addCredentialConfiguration(credentialConfigurationDTO);
+        CredentialConfigResponse credentialConfigResponse = credentialConfigurationService.addCredentialConfiguration(credentialConfigurationDTO);
 
         Assert.assertNotNull(credentialConfigResponse);
         Assert.assertNotNull(credentialConfigResponse.getId());
@@ -138,10 +131,8 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate(null); // or ""
 
         // Act & Assert
-        CertifyException exception = assertThrows(CertifyException.class,
-                () -> credentialConfigurationService.addCredentialConfiguration(dto));
-        org.junit.Assert.assertEquals("Credential Template is mandatory for the DataProvider plugin issuer.",
-                exception.getMessage());
+        CertifyException exception = assertThrows(CertifyException.class, () -> credentialConfigurationService.addCredentialConfiguration(dto));
+        org.junit.Assert.assertEquals("Credential Template is mandatory for the DataProvider plugin issuer.", exception.getMessage());
     }
 
     @Test
@@ -149,8 +140,7 @@ public class CredentialConfigurationServiceImplTest {
         Optional<CredentialConfig> optional = Optional.of(credentialConfig);
         when(credentialConfigRepository.findByCredentialConfigKeyId(anyString())).thenReturn(optional);
         when(credentialConfigMapper.toDto(any(CredentialConfig.class))).thenReturn(credentialConfigurationDTO);
-        CredentialConfigurationDTO credentialConfigurationDTOResponse = credentialConfigurationService
-                .getCredentialConfigurationById("test");
+        CredentialConfigurationDTO credentialConfigurationDTOResponse = credentialConfigurationService.getCredentialConfigurationById("test");
 
         Assert.assertNotNull(credentialConfigurationDTOResponse);
         Assert.assertNotNull(credentialConfigurationDTOResponse.getCredentialTypes());
@@ -158,20 +148,16 @@ public class CredentialConfigurationServiceImplTest {
         Assert.assertNotNull(credentialConfigurationDTOResponse.getContextURLs());
         Assert.assertNotNull(credentialConfigurationDTOResponse.getVcTemplate());
         Assert.assertEquals("test_template", credentialConfigurationDTOResponse.getVcTemplate());
-        Assert.assertEquals(List.of("https://www.w3.org/2018/credentials/v1"),
-                credentialConfigurationDTOResponse.getContextURLs());
-        Assert.assertEquals(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"),
-                credentialConfigurationDTOResponse.getCredentialTypes());
+        Assert.assertEquals(List.of("https://www.w3.org/2018/credentials/v1"), credentialConfigurationDTOResponse.getContextURLs());
+        Assert.assertEquals(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"), credentialConfigurationDTOResponse.getCredentialTypes());
         Assert.assertEquals("ldp_vc", credentialConfigurationDTOResponse.getCredentialFormat());
     }
 
     @Test
     public void getCredentialConfigurationById_ConfigNotFound() {
-        when(credentialConfigRepository.findByCredentialConfigKeyId("12345678"))
-                .thenReturn(Optional.empty());
+        when(credentialConfigRepository.findByCredentialConfigKeyId("12345678")).thenReturn(Optional.empty());
 
-        CredentialConfigException exception = assertThrows(CredentialConfigException.class,
-                () -> credentialConfigurationService.getCredentialConfigurationById("12345678"));
+        CredentialConfigException exception = assertThrows(CredentialConfigException.class, () -> credentialConfigurationService.getCredentialConfigurationById("12345678"));
 
         assertEquals("Configuration not found with the provided id: " + "12345678", exception.getMessage());
     }
@@ -180,10 +166,8 @@ public class CredentialConfigurationServiceImplTest {
     public void getCredentialConfigurationById_ConfigNotActive_ThrowsException() {
         CredentialConfig inactiveConfig = new CredentialConfig();
         inactiveConfig.setStatus("inactive"); // Not Constants.ACTIVE
-        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString()))
-                .thenReturn(Optional.of(inactiveConfig));
-        CertifyException exception = assertThrows(CertifyException.class,
-                () -> credentialConfigurationService.getCredentialConfigurationById("test-id"));
+        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString())).thenReturn(Optional.of(inactiveConfig));
+        CertifyException exception = assertThrows(CertifyException.class, () -> credentialConfigurationService.getCredentialConfigurationById("test-id"));
         assertEquals("Configuration not active.", exception.getMessage());
     }
 
@@ -216,13 +200,11 @@ public class CredentialConfigurationServiceImplTest {
 
         // Mock the mapper methods
         when(credentialConfigMapper.toDto(any(CredentialConfig.class))).thenReturn(validationDto);
-        doNothing().when(credentialConfigMapper).updateEntityFromDto(any(CredentialConfigurationDTO.class),
-                any(CredentialConfig.class));
+        doNothing().when(credentialConfigMapper).updateEntityFromDto(any(CredentialConfigurationDTO.class), any(CredentialConfig.class));
         when(credentialConfigRepository.save(any(CredentialConfig.class))).thenReturn(mockCredentialConfig);
 
         // --- Act ---
-        CredentialConfigResponse credentialConfigResponse = credentialConfigurationService
-                .updateCredentialConfiguration(expectedId, mockDto);
+        CredentialConfigResponse credentialConfigResponse = credentialConfigurationService.updateCredentialConfiguration(expectedId, mockDto);
 
         // --- Assert ---
         Assert.assertNotNull(credentialConfigResponse);
@@ -240,12 +222,9 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void updateExistingCredentialConfiguration_ConfigNotFound() {
-        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString()))
-                .thenReturn(Optional.empty());
+        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString())).thenReturn(Optional.empty());
 
-        CredentialConfigException exception = assertThrows(CredentialConfigException.class,
-                () -> credentialConfigurationService.updateCredentialConfiguration("12345678",
-                        new CredentialConfigurationDTO()));
+        CredentialConfigException exception = assertThrows(CredentialConfigException.class, () -> credentialConfigurationService.updateCredentialConfiguration("12345678", new CredentialConfigurationDTO()));
 
         assertEquals("Configuration not found with the provided id: " + "12345678", exception.getMessage());
     }
@@ -263,11 +242,9 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void deleteCredentialConfiguration_ConfigNotFound() {
-        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString()))
-                .thenReturn(Optional.empty());
+        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString())).thenReturn(Optional.empty());
 
-        CredentialConfigException exception = assertThrows(CredentialConfigException.class,
-                () -> credentialConfigurationService.deleteCredentialConfigurationById("12345678"));
+        CredentialConfigException exception = assertThrows(CredentialConfigException.class, () -> credentialConfigurationService.deleteCredentialConfigurationById("12345678"));
 
         assertEquals("Configuration not found with the provided id: 12345678", exception.getMessage());
     }
@@ -318,8 +295,7 @@ public class CredentialConfigurationServiceImplTest {
 
         Assert.assertNotNull(result);
         Assert.assertTrue(result.getCredentialConfigurationSupportedDTO().containsKey("test-credential"));
-        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO()
-                .get("test-credential");
+        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO().get("test-credential");
         Assert.assertEquals(List.of("ES256"), supportedDTO.getCredentialSigningAlgValuesSupported());
     }
 
@@ -343,8 +319,7 @@ public class CredentialConfigurationServiceImplTest {
 
         Assert.assertNotNull(result);
         Assert.assertTrue(result.getCredentialConfigurationSupportedDTO().containsKey("sdjwt-credential"));
-        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO()
-                .get("sdjwt-credential");
+        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO().get("sdjwt-credential");
         Assert.assertEquals(List.of("ES256"), supportedDTO.getCredentialSigningAlgValuesSupported());
     }
 
@@ -384,8 +359,7 @@ public class CredentialConfigurationServiceImplTest {
 
         // Call with specific version
 
-        CertifyException ex = assertThrows(CertifyException.class,
-                () -> credentialConfigurationService.fetchCredentialIssuerMetadata("unsupported_version"));
+        CertifyException ex = assertThrows(CertifyException.class, () -> credentialConfigurationService.fetchCredentialIssuerMetadata("unsupported_version"));
         assertEquals("Unsupported version: unsupported_version", ex.getMessage());
     }
 
@@ -420,8 +394,7 @@ public class CredentialConfigurationServiceImplTest {
 
         mdocConfig.setStatus("active");
         mdocConfig.setCredentialFormat("mso_mdoc");
-        mdocConfig.setMsoMdocClaims(Map.of("firstName", Map.of("First Name",
-                new ClaimsDisplayFieldsConfigs(List.of(new ClaimsDisplayFieldsConfigs.Display("Test", "en"))))));
+        mdocConfig.setMsoMdocClaims(Map.of("firstName", Map.of("First Name", new ClaimsDisplayFieldsConfigs(List.of(new ClaimsDisplayFieldsConfigs.Display("Test", "en"))))));
         mdocConfig.setDocType("docType1");
 
         List<CredentialConfig> credentialConfigList = List.of(mdocConfig);
@@ -432,8 +405,7 @@ public class CredentialConfigurationServiceImplTest {
         mdocDTO.setCredentialFormat("mso_mdoc");
         mdocDTO.setCredentialConfigKeyId("mdoc-credential");
         mdocDTO.setScope("mdoc_scope");
-        mdocDTO.setMsoMdocClaims(Map.of("firstName", Map.of("First Name",
-                new ClaimsDisplayFieldsConfigDTO(List.of(new ClaimsDisplayFieldsConfigDTO.Display("Test", "en"))))));
+        mdocDTO.setMsoMdocClaims(Map.of("firstName", Map.of("First Name", new ClaimsDisplayFieldsConfigDTO(List.of(new ClaimsDisplayFieldsConfigDTO.Display("Test", "en"))))));
         mdocDTO.setDocType("docType1");
 
         when(credentialConfigMapper.toDto(mdocConfig)).thenReturn(mdocDTO);
@@ -444,15 +416,9 @@ public class CredentialConfigurationServiceImplTest {
         // Verify MSO_MDOC configuration
         Assert.assertNotNull(result.getCredentialConfigurationSupportedDTO());
         Assert.assertEquals(1, result.getCredentialConfigurationSupportedDTO().size());
-        Assert.assertEquals(
-                Map.of("firstName",
-                        Map.of("First Name",
-                                new ClaimsDisplayFieldsConfigs(
-                                        List.of(new ClaimsDisplayFieldsConfigs.Display("Test", "en"))))),
-                result.getCredentialConfigurationSupportedDTO().get("mdoc-credential").getClaims());
+        Assert.assertEquals(Map.of("firstName", Map.of("First Name", new ClaimsDisplayFieldsConfigs(List.of(new ClaimsDisplayFieldsConfigs.Display("Test", "en"))))), result.getCredentialConfigurationSupportedDTO().get("mdoc-credential").getClaims());
 
-        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO()
-                .get("mdoc-credential");
+        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO().get("mdoc-credential");
         Assert.assertNotNull(supportedDTO);
         Assert.assertEquals("mso_mdoc", supportedDTO.getFormat());
         Assert.assertNotNull(supportedDTO.getClaims());
@@ -525,10 +491,8 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(false);
-            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
-                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
-            assertEquals("Context, credentialType and signatureCryptoSuite are mandatory for ldp_vc format",
-                    ex.getMessage());
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+            assertEquals("Context, credentialType and signatureCryptoSuite are mandatory for ldp_vc format", ex.getMessage());
         }
     }
 
@@ -540,8 +504,7 @@ public class CredentialConfigurationServiceImplTest {
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
             mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(true);
-            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
-                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Configuration already exists for the given context and credentialType", ex.getMessage());
         }
     }
@@ -553,8 +516,7 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(MsoMdocCredentialConfigValidator.class)) {
             mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(dto)).thenReturn(false);
-            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
-                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Doctype and signatureCryptoSuite fields are mandatory for mso_mdoc format", ex.getMessage());
         }
     }
@@ -567,8 +529,7 @@ public class CredentialConfigurationServiceImplTest {
         try (var mocked = org.mockito.Mockito.mockStatic(MsoMdocCredentialConfigValidator.class)) {
             mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
             mocked.when(() -> MsoMdocCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(true);
-            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
-                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Configuration already exists for the given doctype", ex.getMessage());
         }
     }
@@ -580,8 +541,7 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(SdJwtCredentialConfigValidator.class)) {
             mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(dto)).thenReturn(false);
-            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
-                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Vct and signatureAlgo fields are mandatory for vc+sd-jwt format", ex.getMessage());
         }
     }
@@ -594,8 +554,7 @@ public class CredentialConfigurationServiceImplTest {
         try (var mocked = org.mockito.Mockito.mockStatic(SdJwtCredentialConfigValidator.class)) {
             mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
             mocked.when(() -> SdJwtCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(true);
-            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
-                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Configuration already exists for the given vct", ex.getMessage());
         }
     }
@@ -610,8 +569,7 @@ public class CredentialConfigurationServiceImplTest {
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
             mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(false);
-            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
-                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Unsupported signature crypto suite: test-rdfc-2019", ex.getMessage());
         }
     }
@@ -622,10 +580,8 @@ public class CredentialConfigurationServiceImplTest {
         dto.setCredentialFormat("ldp_vc");
         dto.setVcTemplate("test_template");
         dto.setCredentialStatusPurposes(List.of("purpose1", "purpose2"));
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
-                List.of("purpose1"));
-        CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
-                .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1"));
+        CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
         assertEquals("Multiple credential status purposes are not currently supported.", ex.getMessage());
     }
 
@@ -635,10 +591,8 @@ public class CredentialConfigurationServiceImplTest {
         dto.setCredentialFormat("ldp_vc");
         dto.setVcTemplate("test_template");
         dto.setCredentialStatusPurposes(List.of("invalid_purpose"));
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
-                List.of("purpose1", "purpose2"));
-        CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
-                .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
+        CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
         assertEquals("Invalid credential status purposes. Allowed values are: [purpose1, purpose2]", ex.getMessage());
     }
 
@@ -654,12 +608,10 @@ public class CredentialConfigurationServiceImplTest {
         dto.setSignatureAlgo("EdDSA");
         dto.setKeyManagerAppId("TEST2019");
         dto.setKeyManagerRefId("TEST2019-REF");
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
-                List.of("purpose1", "purpose2"));
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
-            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto,
-                    true);
+            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true);
         }
     }
 
@@ -675,12 +627,10 @@ public class CredentialConfigurationServiceImplTest {
         dto.setSignatureAlgo("EdDSA");
         dto.setKeyManagerAppId("TEST2019");
         dto.setKeyManagerRefId("TEST2019-REF");
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
-                List.of("purpose1", "purpose2"));
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
-            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto,
-                    true);
+            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true);
         }
     }
 
@@ -696,12 +646,10 @@ public class CredentialConfigurationServiceImplTest {
         dto.setSignatureAlgo("EdDSA");
         dto.setKeyManagerAppId("TEST2019");
         dto.setKeyManagerRefId("TEST2019-REF");
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
-                List.of("purpose1", "purpose2"));
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
-            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto,
-                    true);
+            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true);
         }
     }
 
@@ -716,10 +664,8 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
 
         // Act & Assert
-        CertifyException exception = assertThrows(CertifyException.class,
-                () -> credentialConfigurationService.addCredentialConfiguration(dto));
-        assertEquals("No key chooser configuration found for the signatureAlgo: RsaSignature2018",
-                exception.getMessage());
+        CertifyException exception = assertThrows(CertifyException.class, () -> credentialConfigurationService.addCredentialConfiguration(dto));
+        assertEquals("No key chooser configuration found for the signatureAlgo: RsaSignature2018", exception.getMessage());
     }
 
     @Test
@@ -735,8 +681,7 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
 
         // Act & Assert
-        CertifyException exception = assertThrows(CertifyException.class,
-                () -> credentialConfigurationService.addCredentialConfiguration(dto));
+        CertifyException exception = assertThrows(CertifyException.class, () -> credentialConfigurationService.addCredentialConfiguration(dto));
         assertEquals("No matching appId and refId found in the key chooser list.", exception.getMessage());
     }
 }
